welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: '<-' expected but ')' found.
			for (x->getMondeHauteur()-1 to 0)
                                                        ^ZigZag:25: error: illegal start of simple expression
		}
                ^